Setting up Ui project, adding sql script

--- a/PatientInfo/src/main/resources/application.properties
+++ b/PatientInfo/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/demo
 spring.datasource.username=plein
 spring.datasource.password=lesfouilles
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
