Adding user interface minor corrections.

--- a/ClientUi/src/main/resources/application.properties
+++ b/ClientUi/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.application.name=mediscreen_user_interface
 
+#Server -------------------------------
+
+server.port=8080
+
+#Logging ------------------------------
+
+logging.level.root=info
+logging.level.mediscreen.clientUi=debug
+
+#Url ----------------------------------
+
+url.patientinfo=http://localhost:8081
