--- a/PatientInfo/src/main/resources/application.properties
+++ b/PatientInfo/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/demo
 spring.datasource.username=plein
 spring.datasource.password=lesfouilles
 spring.jpa.hibernate.ddl-auto=validate
+
+#Swagger ------------------------------
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
