Adding basic view

--- a/ClientUi/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/ClientUi/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,12 @@
-{"properties": [{
-  "name": "url.patientinfo",
-  "type": "java.lang.String",
-  "description": "Address to connect to patient_info microservice"
-}]}
+{"properties": [
+  {
+    "name": "url.patientinfo",
+    "type": "java.lang.String",
+    "description": "Address to connect to patient_info microservice"
+  },
+  {
+    "name": "url.note",
+    "type": "java.lang.String",
+    "description": "Address to connect to note microservice"
+  }
+]}
