--- a/ClientUi/src/main/resources/application.properties
+++ b/ClientUi/src/main/resources/application.properties
@@ -12,3 +12,4 @@ logging.level.mediscreen.clientUi=debug
 #Url ----------------------------------
 
 url.patientinfo=http://localhost:8081
+url.note=http://localhost:8082
