--- a/Notes/src/main/resources/application.properties
+++ b/Notes/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.data.mongodb.password=jessuisgroot
 spring.data.mongodb.database=demo
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
+
+#Swagger ------------------------------
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
