Refactor for integration.

--- a/ClientUi/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/ClientUi/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,10 @@
     "name": "url.note",
     "type": "java.lang.String",
     "description": "Address to connect to note microservice"
+  },
+  {
+    "name": "url.assessment",
+    "type": "java.lang.String",
+    "description": "Address to connect to assessment microservice'"
   }
 ]}
