--- a/ClientUi/src/main/resources/application.properties
+++ b/ClientUi/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=mediscreen_user_interface
 
 #Server -------------------------------
 
-server.port=8080
+server.port=8083
 
 #Logging ------------------------------
 
@@ -11,5 +11,6 @@ logging.level.mediscreen.clientUi=debug
 
 #Url ----------------------------------
 
+url.assessment=http://localhost:8080
 url.patientinfo=http://localhost:8081
 url.note=http://localhost:8082
