--- a/PatientInfo/src/main/resources/application.properties
+++ b/PatientInfo/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.jpa.show-sql=true
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/demo
-spring.datasource.username=plein
-spring.datasource.password=lesfouilles
+spring.datasource.username=root
+spring.datasource.password=password1
 spring.jpa.hibernate.ddl-auto=validate
 
 #Swagger ------------------------------
